[package]
name = "rspades"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rspades"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
enet = { git = "https://github.com/michidk/enet-rs", branch = "master" }
# enet = { path = "../../../enet-rs" }
enet-sys = "1.0.1"
sprot = { version = "0.1.0", path = "../sprot" }
